--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
+# We have customized spec, so we need it on github
+# *.spec
 
 # Installer logs
 pip-log.txt
@@ -127,3 +128,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Terraform
+.terraform/
+terraform.tfstate*
